bug fixes in front end, button to collapsed fixed sidebar, some changes in borders and sizes to work in firefox

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -1,36 +1,41 @@
   //### container ###//
 
   .container {
-    grid-template-rows: 50px 1fr 73px;
+    grid-template-rows: 7% auto 100px;
     grid-template-columns: 1fr;
+    display: grid;
     display: -ms-grid;
     -ms-grid-columns: 1fr;
-    -ms-grid-rows: 50px 1fr 100px;
-    display: grid;
+    -ms-grid-rows: 7% auto 100px;
     height: 100vh;
     width: 100%;
+    overflow-x:hidden;
   }
 
   //### header ###//
 
   .site-header {
-    box-shadow: 0px 0px 0px 1px #ffd6d6 inset;
+    border: 0.5px solid #ffd6d6;
     background: #704848;
     grid-column: 1;
     grid-row: 1 / 2;
-    z-index: 2;
     position: relative;
     width: 100%;
     height: 100%;
     top: 0%;
+    z-index: 2;
+  }
+
+  .openbtn {
+    display: none;
   }
 
   .site-nav {
     position: absolute;
-    top: 5px;
+    top: 1px;
     left: 2%;
     background-color: $background-color;
-    border: 1px solid black;
+    border: 0.5px solid black;
     border-radius: 5px;
     text-align: center;
     font-weight: 600;
@@ -103,41 +108,49 @@
 //### footer (in laptop turns into navigation menu) ###//
 
   .navigation-menu {
-    color: #ffd6d6;
-    box-shadow: 0px 0px 0px 1px #ffd6d6 inset;
-    background: #704848;
-    grid-column: 1;
+    display: grid;
+    grid-template-columns: 33% 33% 34%;
     grid-row: 3 / 4;
-    width: 100%;
+    grid-template-rows: 1fr;
+    color: #ffd6d6;
+    border: 0.5px solid #ffd6d6;
+    border-top: none;
+    background: #704848;
     text-align: center;
     z-index: 1;
+    padding: 10px 0;
+    align-items: center;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+
     br{
       display: none;
     }
   }
 
   .author-name {
+    grid-column: 1 / 2;
     color: #ffd6d6;
   }
 
-  .author-description, .author-email, .profile-pic {
+  .author-description, .author-email, .profile-pic, .box {
     display: none;
   }
 
   .contact-list,
   .social-media-list {
-    display: inline-block;
-    list-style: none;
+    grid-column: 3 / 4;
+    grid-row: 1;
   }
 
   .social-description {
     @include relative-font-size(0.8);
-    display: block;
-    padding-bottom: 0px;
-    padding-top: 0px;
+    grid-column: 2 / 3;
     margin-right: $spacing-unit / 3;
     margin-left: $spacing-unit / 3;
-    line-height: normal;
     color: #ffd6d6;
   }
 
@@ -194,8 +207,13 @@
 //### main content ###//
 
   .main-content {
-    grid-column: 1;
+    grid-column: 1 / 3;
     grid-row: 2 / 3;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
   }
   
   .home {
@@ -566,7 +584,7 @@ table.paleBlueRows tfoot td {
   }
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 1400px) {
   .container {
     -ms-grid-columns: 16% 1fr;
     -ms-grid-rows: 7% 1fr;
@@ -575,7 +593,7 @@ table.paleBlueRows tfoot td {
   }
 
   .site-header {
-    box-shadow: 0px 0px 0px 1px #ffd6d6 inset;
+    border: 0.5px solid #ffd6d6;
     position: fixed;
     width: 100%;
     height: 7%;
@@ -585,10 +603,29 @@ table.paleBlueRows tfoot td {
     z-index: 2;
   }
 
- .site-nav {
+  .openbtn {
+    display: inline-block;
     position: relative;
     margin: auto;
-    width: 90%;
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #111;
+    box-shadow: inset 0 0 1em #ffd6d6;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    left: -25%;
+    width: 5%;
+  }
+
+  .openbtn:hover {
+    background-color: #444;
+  }
+
+ .site-nav {
+    position: relative;
+    margin-left: 1%;
+    margin-right: 1%;
     height: 80%;
     left: 0%;
     top: 10%;
@@ -601,21 +638,25 @@ table.paleBlueRows tfoot td {
     label {
       display: none;
     }
+
     .nav-trigger {
       display: none;
     }
+
     .menu-icon {
       display: none;
     }
+
     .trigger{
       display: inline-flex;
       align-items: center;
       height: 100%;
-
     }
+
     .nav-buttons{
       vertical-align: middle;
     }
+
     .page-link {
       @include relative-font-size(1);
       border-radius: 0px;
@@ -635,54 +676,95 @@ table.paleBlueRows tfoot td {
   }
 
   .navigation-menu {
-    box-shadow: 0px -1px 0px 1px #ffd6d6 inset;
+    grid-template-columns: 1fr;
+    grid-template-rows: 50px 20% 40px 40px 15% 40px 40px 1fr;
     position: fixed;
     width: 16%;
     height: 100%;
     left: 0%;
-    top: 7%;
-    z-index: 2;
+    top: 7.05%;
+    -webkit-transition: all 0.4s ease-in-out;
+    -moz-transition: all 0.4s ease-in-out;
+    -ms-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+
     br{
       display: inline;
     }
   }
 
+  @-moz-document url-prefix() { 
+    .navigation-menu { top: 7.2%;}
+  } 
+
+  .animate .main-content{
+    width: calc(104% + 16%);
+    transform: translateX(-16%);
+  }
+  
+  .animate .navigation-menu{
+    -webkit-transition: all 0.55s ease-in-out;
+    -moz-transition: all 0.55s ease-in-out;
+    -ms-transition: all 0.55s ease-in-out;
+    -o-transition: all 0.55s ease-in-out;
+    transition: all 0.55s ease-in-out;
+    transform:translateX(-100%);
+  }  
+
   .box{
-    position: relative;
     margin: auto;
-    left: 0%;
-    max-width: 50%;
-    height: auto;
+    display: inline;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    max-width: 60%;
+    height: 100%;
     overflow: hidden;
+    align-self: center;
+    align-items: center;
   }
 
   .box .profile-pic {
-    overflow: hidden;
-    -webkit-transition: all .4s ease;
-    -moz-transition: all .4s ease;
-    -ms-transition: all .4s ease;
-    -o-transition: all .4s ease;
-    transition: all .4s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    -ms-transition: all .5s ease;
+    -o-transition: all .5s ease;
+    transition: all .5s ease;
     display: inline;
-    padding-top: $spacing-unit;
     max-width: 100%;
-    vertical-align: middle;
     max-height: 100%;
     &:hover{
-        -webkit-transform: scale(1.1);
-        -moz-transform: scale(1.1);
-        -ms-transform: scale(1.1);
-        -o-transform: scale(1.1);
-        transform: scale(1.1);
+        -webkit-transform: scale(1.3);
+        -moz-transform: scale(1.3);
+        -ms-transform: scale(1.3);
+        -o-transform: scale(1.3);
+        transform: scale(1.3);
     }
   }
 
+  .contact-list,
+  .social-media-list {
+    grid-column: 1 / 2;
+    grid-row: 7 / 8;
+  }
+
+  .social-description {
+    @include relative-font-size(0.8);
+    grid-column: 1 / 2;
+    grid-row: 6 / 7;
+    margin-right: $spacing-unit / 3;
+    margin-left: $spacing-unit / 3;
+    color: #ffd6d6;
+  }
+
   .author-name {
+    grid-row: 3 / 4;
     color: #ffd6d6;
   }
 
   .navigation-menu > .author-description{
     display: block;
+    grid-row: 5 / 6;
     text-align: justify;
     @include relative-font-size(0.8);
     margin-right: $spacing-unit / 2;
@@ -694,9 +776,18 @@ table.paleBlueRows tfoot td {
     } 
   }
 
+#btntheme{
+  grid-row: 8/9;
+}
+
   .main-content {
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
+    width: 100%;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
     box-shadow: -1px -1px 0px 1px #7c7c7c inset;
   }
 
@@ -728,11 +819,10 @@ table.paleBlueRows tfoot td {
     font-size: 14px;
   }
 
-}
-
-@media only screen and (min-width: 1150px) {
   .author-email{
-    display: inline;
+    display: grid;
+    grid-row: 4 / 5;
+    grid-column: 1 / 2;
     padding-right: $spacing-unit / 3;
     padding-left: $spacing-unit / 3;
     @include relative-font-size(0.68);
